#ADD_SUBDIRECTORY(STKernel)
#ADD_SUBDIRECTORY(Arrays)
#ADD_SUBDIRECTORY(Sdk)
#ADD_SUBDIRECTORY(STatistiK)
#ADD_SUBDIRECTORY(Algebra)
#ADD_SUBDIRECTORY(DManager)
#ADD_SUBDIRECTORY(Reduct)
#ADD_SUBDIRECTORY(Regress)
#ADD_SUBDIRECTORY(Model)
#ADD_SUBDIRECTORY(AAModels)

FILE( GLOB_RECURSE stk_src *.h *.cpp)
ADD_LIBRARY(${LIBRARY_NAME} ${stk_src})

#ADD_LIBRARY(${LIBRARY_NAME})
#TARGET_LINK_LIBRARIES(${LIBRARY_NAME} STKernel Arrays Sdk STatistiK Algebra DManager Reduct Regress Model AAModels)


SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES LINKER_LANGUAGE CXX)
INSTALL(TARGETS ${LIBRARY_NAME} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})